# python-observability

./: .gitignore  README.md  Taskfile.yaml  config.alloy  flake.nix  pyproject.toml
examples/logs/: __init__.py  gunicorn.config.py
examples/metrics-multi-process-pull/: __init__.py  gunicorn.config.py
examples/metrics-push/: __init__.py  gunicorn.config.py
examples/metrics-single-process-pull/: __init__.py  gunicorn.config.py
utils/: env.py  otel.py
